Shift navbar left to avoid overlapping image

--- a/src/Navbar.css
+++ b/src/Navbar.css
@@ -1,7 +1,7 @@
 .navbar {
     position: fixed;
     top: 36px;
-    right: 10%;
+    right: 16%;
     z-index: 10000;
     pointer-events: auto;
     transition: color 0.5s ease;
@@ -65,7 +65,7 @@
 
 @media (max-width: 1100px) {
     .navbar {
-        right: 5%;
+        right: 8%;
     }
 
     .nav-links {
